--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@lemoncode/fonk": "^1.5.1",
+    "@lemoncode/fonk-final-form": "^2.3.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "final-form": "^4.20.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
