--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.19",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
     "final-form": "^4.20.6",
     "react": "^17.0.2",
@@ -19,6 +23,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
+    "typescript": "^4.5.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
